--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ header .subtitle { animation-delay: 1.2s; }
     .subtitle {
      font-family: 'Playfair Display', serif;
       font-size: 22px;
+      font-weight: 700;
       color: #000;
       line-height: 1.6;
       max-width: 800px;
@@ -1437,6 +1438,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
