--- a/index.html
+++ b/index.html
@@ -140,6 +140,15 @@ header .subtitle { animation-delay: 1.2s; }
         position: relative;
         padding-bottom: 10px; }
     
+.title-line {
+width: 80%;
+max-width: 250px;
+height: 2px;
+background-color: #000;
+margin: 12px auto 0;
+border-radius: 2px;
+}
+    
     .subtitle {
      font-family: 'Playfair Display', serif;
       font-size: 22px;
@@ -1438,6 +1447,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
