--- a/index.html
+++ b/index.html
@@ -152,7 +152,6 @@ border-radius: 2px;
     .subtitle {
      font-family: 'Playfair Display', serif;
       font-size: 22px;
-      font-weight: 700;
       color: #000;
       line-height: 1.6;
       max-width: 800px;
@@ -961,10 +960,11 @@ html {
 
     <!-- Cuenta atrás -->
     <section class="countdown-section">
-      <h2>Únete a nosotros el</h2>
-       <div class="date-box">
+     <div class="date-box">
+  <h2 class="join">Únete a nosotros el</h2>
   <span>17 · 10 · 2026</span>
 </div>
+
       <h3 class="wedding-day-title">Día de la boda</h3>
       <div id="countdown">
         <div class="time-box"><span id="days">0</span><small>Días</small></div>
@@ -1447,6 +1447,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
