--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ border-radius: 2px;
   font-family: 'Cinzel', serif;
   font-size: 18px;
   font-weight: 700;
-  color: #6b4a2b;
+  color: #000;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
@@ -426,7 +426,6 @@ border-radius: 2px;
       text-align: center;
       font-family: 'Playfair Display', serif;
       font-size: 18px;
-      font-weight: 700;
       color: #000;
       margin: 40px 20px;
       line-height: 1.6;
@@ -1447,6 +1446,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
