--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ header .subtitle { animation-delay: 1.2s; }
 .title { font-family: 'Cinzel', serif;
         font-size: 36px;
         letter-spacing: 3px;
-        color: #000;
+        color: ##6b8e23
         font-weight: 700;
         display: inline-block;
         position: relative;
@@ -379,7 +379,7 @@ border-radius: 2px;
   font-family: 'Cinzel', serif;
   font-size: 18px;
   font-weight: 700;
-  color: #000;
+  color: #a00034;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
@@ -788,7 +788,7 @@ label {
 .modal-content h3.modal-title {
   font-family: 'Cinzel', serif;
   font-size: 26px;
-  color: #6b4a2b;
+  color: #6b8e23;
   text-align: center;
   font-weight: 700;
   margin-top: 10px;
@@ -1446,6 +1446,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
