--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ header .subtitle { animation-delay: 1.2s; }
 .title { font-family: 'Cinzel', serif;
         font-size: 36px;
         letter-spacing: 3px;
-        color: ##6b8e23
+        color: #6b8e23;
         font-weight: 700;
         display: inline-block;
         position: relative;
@@ -1446,6 +1446,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
