--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ header .subtitle { animation-delay: 1.2s; }
 }
 
 
-.title { font-family: 'Cinzel', serif;
+.title {font-family: 'Great Vibes', cursive;
         font-size: 36px;
         letter-spacing: 3px;
         color: #6b8e23;
@@ -1446,6 +1446,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
