--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+
 
 
   <style>
@@ -131,7 +133,7 @@ header .subtitle { animation-delay: 1.2s; }
 }
 
 
-.title {font-family: 'Great Vibes', cursive;
+.title { font-family: 'Tangerine', cursive;
         font-size: 36px;
         letter-spacing: 3px;
         color: #6b8e23;
@@ -1446,6 +1448,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
