--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ border-radius: 2px;
   font-family: 'Playfair Display', serif;
   font-size: 26px;
   font-weight: 700;
-  color: #000;
+  color: #b87b5a;
   text-align: center;
   margin-top: 10px;
   margin-bottom: 15px;
@@ -1448,6 +1448,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
