--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@ html {
 
     <div class="asistencia-title">
       <img src="mi_foto_boda_v32.png" alt="Cuestionario de asistencia">
-      <h3>Cuestionario de asistencia</h3>
+      <h3>CUESTIONARIO DE ASISTENCIA</h3>
     </div>
 
     <form id="rsvpForm"
@@ -1448,6 +1448,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
