--- a/index.html
+++ b/index.html
@@ -346,6 +346,12 @@
   max-height: 200px;
   transform: translateY(0);
 }
+    /* Ocultar mensajes de envío por defecto */
+#successBox,
+#errorBox {
+  display: none;
+}
+
 
   </style>
 </head>
@@ -827,6 +833,7 @@
   </script>
 </body>
 </html>
+
 
 
 
