--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
         <span>17 · 10 · 2026</span>
       </div>
 
-      <h3 class="wedding-day-title">Día de la boda</h3>
+      <h3 class="wedding-day-title">Cuenta atras</h3>
       <div id="countdown">
         <div class="time-box"><span id="days">0</span><small>Días</small></div>
         <div class="time-box"><span id="hours">0</span><small>Horas</small></div>
@@ -877,6 +877,7 @@
   </script>
 </body>
 </html>
+
 
 
 
